force-app/main/default/objects/Developer__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>This field indicates the date of birth</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field indicates the date of birth</inlineHelpText>
    <label>DOB</label>
    <type>Date</type>
</CustomField>