force-app/main/default/objects/Developer__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Type</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Developers</relationshipLabel>
    <relationshipName>Developers</relationshipName>
    <type>Lookup</type>
</CustomField>