force-app/main/default/objects/Developer__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Manager__c</referenceTo>
    <relationshipLabel>Developers (Manager)</relationshipLabel>
    <relationshipName>Developers1</relationshipName>
    <type>Lookup</type>
</CustomField>